--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <div class="post-info">
-  <p>Posted on {{ page.date | date: "%B %-d, %Y" }} in {{ page.category }}</p>
+  <p>Posted on {{ page.date | date: site.format.date_long }}.</p>
 </div>
 
 {{ content }}
