Enable feed plugin

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,8 @@
     <link rel="stylesheet" href="/css/solarized.css">
 
     <link rel="copyright" href="/licensing.html">
+
+    {% feed_meta %}
   </head>
   <body>
     <div class="navbar">
