--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,17 +21,17 @@
 
     {% include twitter-card.html %}
 
-    <link rel="icon" sizes="16x16"   href="/icon-16.png">
-    <link rel="icon" sizes="32x32"   href="/icon-32.png">
-    <link rel="icon" sizes="96x96"   href="/icon-96.png">
-    <link rel="icon" sizes="196x196" href="/icon-196.png">
+    <link rel="icon" sizes="16x16"   href="{{site.baseurl}}/icon-16.png">
+    <link rel="icon" sizes="32x32"   href="{{site.baseurl}}/icon-32.png">
+    <link rel="icon" sizes="96x96"   href="{{site.baseurl}}/icon-96.png">
+    <link rel="icon" sizes="196x196" href="{{site.baseurl}}/icon-196.png">
 
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/css/lunarsite.css">
-    <link rel="stylesheet" href="/css/solarized.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/fonts/fonts.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/lunarsite.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/solarized.css">
 
-    <link rel="copyright" href="/licensing.html">
+    <link rel="copyright" href="{{site.url}}{{site.baseurl}}/pages/licensing.html">
 
     {% feed_meta %}
   </head>
@@ -39,14 +39,14 @@
     <div class="navbar">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/index.html">
-            <img src="/logo.png">
+          <a class="navbar-brand" href="{{baseurl}}/index.html">
+            <img src="{{site.baseurl}}/logo.png">
           </a>
         </div>
         <ul class="navbar-nav">
-          <li><a href="/archive.html">Archive</a></li>
-          <li><a href="/pages/emacs.html">Emacs</a></li>
-          <li><a href="/pages/colophon.html">Colophon</a></li>
+          <li><a href="{{site.baseurl}}/archive.html">Archive</a></li>
+          <li><a href="{{site.baseurl}}/pages/emacs.html">Emacs</a></li>
+          <li><a href="{{site.baseurl}}/pages/colophon.html">Colophon</a></li>
         </ul>
       </div>
     </div>
@@ -56,8 +56,8 @@
       </div>
       <footer class="page-footer">
         <p>
-          <a href="/archive.html">Archive</a>
-          · <a href="/feed.atom">Feed</a>
+          <a href="{{site.baseurl}}/archive.html">Archive</a>
+          · <a href="{{site.baseurl}}/feed.atom">Feed</a>
           · <a href="{{ site.github.url }}blob/master/{{page.path}}">Source on Github</a>
         </p>
         <p>
@@ -66,7 +66,7 @@
            <a target="_blank" href="http://jaspervdj.be/hakyll/">Hakyll</a>,
            <a target="_blank" href="http://johnmacfarlane.net/pandoc/">Pandoc</a>, and
            <a target="_blank" href="https://github.com">Github</a>
-           (<a href="/pages/colophon.html">colophon</a>).<br>
+           (<a href="{{site.baseurl}}/pages/colophon.html">colophon</a>).<br>
         </p>
         <p>
            I'm on <a target="_blank" href="https://github.com/{{site.author.github }}">Github</a>,
@@ -89,7 +89,7 @@
           Attribution 4.0 International License</a>. Permissions beyond the
           scope of this license may be available
           at <a xmlns:cc="http://creativecommons.org/ns#"
-          href="http://www.lunaryorn.com/pages/licensing.html"
+          href="{{site.url}}{{site.baseurl}}/pages/licensing.html"
           rel="cc:morePermissions">Licensing</a>.
         </p>
       </footer>
