Fix excerpt rendering in post list

--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -15,7 +15,7 @@
     {% if post.excerpt and include.include_excerpt %}
     <div class="post-list-teaser">
       <p>
-        {{ excerpt }}
+        {{ post.excerpt | markdownify }}
         <a href="">Read more…</a>
       </p>
     </div>
