--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <article>
-  <header>
-    <h1 class="page-header">{{page.title|escape}}
+  <header class="page-header">
+    <h1 class="title">{{page.title|escape}}
       {% if page.subtitle %}<small>{{page.subtitle | escape}}</small>{% endif%}
     </h1>
   </header>
