--- a/css/lunarsite.css
+++ b/css/lunarsite.css
@@ -94,21 +94,14 @@ h1, h2, h3, h4 {                /* Text headings*/
 }
 
 h1 {
-    font-size: 1.5rem;
-    font-weight: 700;
-    font-family: "Lato", sans-serif;
-    margin-bottom: 0.2em;
-}
-
-h2 {
     font-size: 1.1em;
 }
 
-h3 {
+h2 {
     font-size: 1.05em;
 }
 
-h4 {
+h3 {
     font-size: 1em;
 }
 
@@ -181,6 +174,13 @@ pre code {
     border-bottom: 1px solid #CCC;
     margin-bottom: 1.5rem;
     padding: 0.5rem;
+}
+
+.title {               /* Page title */
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: "Lato", sans-serif;
+    margin-bottom: 0.2em;
 }
 
 .post-info {
