--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="{{baseurl}}/index.html">
-            <img src="{{site.baseurl}}/logo.png">
+            <img alt="My personal logo" src="{{site.baseurl}}/logo.png">
           </a>
         </div>
         <ul class="navbar-nav">
