--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,5 +96,6 @@
         </p>
       </footer>
     </div>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
