Add missing link target for "more" links

--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -16,7 +16,7 @@
     <div class="post-list-teaser">
       {{ post.excerpt | markdownify }}
       <p>
-        <a href="">Read more…</a>
+        <a href="{{ url }}">Read more…</a>
       </p>
     </div>
     {% endif %}
