Update colophon and footer with new tooling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,8 +65,7 @@
         <p>
            Powered by
            <a target="_blank" href="http://www.gnu.org/software/emacs/">Emacs</a>,
-           <a target="_blank" href="http://jaspervdj.be/hakyll/">Hakyll</a>,
-           <a target="_blank" href="http://johnmacfarlane.net/pandoc/">Pandoc</a>, and
+           <a target="_blank" href="http://jekyllrb.com">Jekyll</a>, and
            <a target="_blank" href="https://github.com">Github</a>
            (<a href="{{site.baseurl}}/pages/colophon.html">colophon</a>).<br>
         </p>
