--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,12 @@ layout: page
 ---
 
 <div class="post-info">
-  <p>Posted on {{ page.date | date: site.format.date_long }}.</p>
+  <p>
+    Posted on {{ page.date | date: site.format.date_long }}.
+    {% if page.path %}
+    <a href="{{site.github.url}}/edit/master/{{page.path}}">Edit on Github</a>
+    {% endif %}
+  </p>
 </div>
 
 {{ content }}
