--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -37,37 +37,35 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("Lato-Regular.woff") format('woff');
+    src: url("LatoLatin-Regular.woff") format('woff');
 }
 
 @font-face {
     font-family: "Lato";
-    src: url("Lato-Italic.woff") format('woff');
+    src: url("LatoLatin-Italic.woff") format('woff');
     font-style: italic;
 }
 
 @font-face {
     font-family: "Lato";
-    src: url("Lato-Bold.woff") format('woff');
+    src: url("LatoLatin-Bold.woff") format('woff');
     font-weight: 700;
 }
 
 @font-face {
     font-family: "Lato";
-    src: url("Lato-BoldItalic.woff") format('woff');
+    src: url("LatoLatin-BoldItalic.woff") format('woff');
     font-weight: 700;
     font-style: italic;
 }
 
 @font-face {
     font-family: "Source Code Pro";
-    src: url("SourceCodePro-Regular.otf.woff2") format('woff2'),
-         url("SourceCodePro-Regular.otf.woff") format('woff');
+    src: url("SourceCodePro-Regular.otf.woff") format('woff');
 }
 
 @font-face {
     font-family: "Source Code Pro";
-    src: url("SourceCodePro-Bold.otf.woff2") format('woff2'),
-         url("SourceCodePro-Bold.otf.woff") format('woff');
+    src: url("SourceCodePro-Bold.otf.woff") format('woff');
     font-weight: 700;
 }
