Move stylesheets to SCSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,10 +26,7 @@
     <link rel="icon" sizes="96x96"   href="{{site.baseurl}}/icon-96.png">
     <link rel="icon" sizes="196x196" href="{{site.baseurl}}/icon-196.png">
 
-    <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/fonts/fonts.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/css/lunarsite.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/css/solarized.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/lunarsite.css">
 
     <link rel="copyright" href="{{site.url}}{{site.baseurl}}/pages/licensing.html">
 
