Fix scss-lint errors in style sheets

--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,71 +1,71 @@
 @font-face {
-    font-family: "Vollkorn";
-    src: url("vollkorn-regular.woff") format('woff');
+  font-family: 'Vollkorn';
+  src: url('vollkorn-regular.woff') format('woff');
 }
 
 @font-face {
-    font-family: "Vollkorn";
-    src: url("vollkorn-italic.woff") format('woff');
-    font-style: italic;
+  font-family: 'Vollkorn';
+  src: url('vollkorn-italic.woff') format('woff');
+  font-style: italic;
 }
 
 @font-face {
-    font-family: "Vollkorn";
-    src: url("vollkorn-bold.woff") format('woff');
-    font-weight: 700;
+  font-family: 'Vollkorn';
+  src: url('vollkorn-bold.woff') format('woff');
+  font-weight: 700;
 }
 
 @font-face {
-    font-family: "Vollkorn";
-    src: url("vollkorn-bolditalic.woff") format('woff');
-    font-style: italic;
-    font-weight: 700;
+  font-family: 'Vollkorn';
+  src: url('vollkorn-bolditalic.woff') format('woff');
+  font-style: italic;
+  font-weight: 700;
 }
 
 @font-face {
-    font-family: "Vollkorn";
-    src: url("vollkorn-semibold.woff") format('woff');
-    font-weight: 600;
+  font-family: 'Vollkorn';
+  src: url('vollkorn-semibold.woff') format('woff');
+  font-weight: 600;
 }
 
 @font-face {
-    font-family: "Vollkorn";
-    src: url("vollkorn-semibolditalic.woff") format('woff');
-    font-style: italic;
-    font-weight: 600;
+  font-family: 'Vollkorn';
+  src: url('vollkorn-semibolditalic.woff') format('woff');
+  font-style: italic;
+  font-weight: 600;
 }
 
 @font-face {
-    font-family: "Lato";
-    src: url("LatoLatin-Regular.woff") format('woff');
+  font-family: 'Lato';
+  src: url('LatoLatin-Regular.woff') format('woff');
 }
 
 @font-face {
-    font-family: "Lato";
-    src: url("LatoLatin-Italic.woff") format('woff');
-    font-style: italic;
+  font-family: 'Lato';
+  src: url('LatoLatin-Italic.woff') format('woff');
+  font-style: italic;
 }
 
 @font-face {
-    font-family: "Lato";
-    src: url("LatoLatin-Bold.woff") format('woff');
-    font-weight: 700;
+  font-family: 'Lato';
+  src: url('LatoLatin-Bold.woff') format('woff');
+  font-weight: 700;
 }
 
 @font-face {
-    font-family: "Lato";
-    src: url("LatoLatin-BoldItalic.woff") format('woff');
-    font-weight: 700;
-    font-style: italic;
+  font-family: 'Lato';
+  src: url('LatoLatin-BoldItalic.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
 }
 
 @font-face {
-    font-family: "Source Code Pro";
-    src: url("SourceCodePro-Regular.otf.woff") format('woff');
+  font-family: 'Source Code Pro';
+  src: url('SourceCodePro-Regular.otf.woff') format('woff');
 }
 
 @font-face {
-    font-family: "Source Code Pro";
-    src: url("SourceCodePro-Bold.otf.woff") format('woff');
-    font-weight: 700;
+  font-family: 'Source Code Pro';
+  src: url('SourceCodePro-Bold.otf.woff') format('woff');
+  font-weight: 700;
 }
