Extract inline box shadow into variable

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,6 +14,11 @@ $sans-font-size: .93em;
 $heading-color: #222;
 $secondary-color: #777;
 $border-color: #ccc;
+$quote-border-color: #eee;
+
+$inline-box-shadow-color: rgba(0, 0, 0, .2);
+$inline-box-shadow-background: #fff;
+$inline-box-shadow: 0 1px 0 $inline-box-shadow-color, 0 0 0 2px $inline-box-shadow-background inset;
 
 // Basic typography styles
 body {
@@ -81,7 +86,7 @@ sup {
 }
 
 blockquote {
-  border-left: 5px solid #eee;
+  border-left: 5px solid $quote-border-color;
   font-size: .9em;
   line-height: 1.25;
   margin: 1.2em 0;
@@ -90,7 +95,7 @@ blockquote {
 
 a {
   // Sans serif for links
-  color: #333;
+  color: $main-color;
   font-family: $sans-font;
   font-size: $sans-font-size;
   text-decoration: none;
@@ -180,7 +185,7 @@ code {
 kbd {
   border: 1px solid $border-color;
   border-radius: 4px;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, .2), 0 0 0 2px #fff inset;
+  box-shadow: $inline-box-shadow;
   padding: 0 4px;
 }
 
