Switch to space-separation of paragraphs
Closes GH-4

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,7 @@
 @import 'fonts';
 @import 'solarized';
 
-@import 'paragraph-indent';
+@import 'paragraph-space';
 
 $main-font: 'Vollkorn', serif;
 $main-color: #444;
