--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -108,7 +108,7 @@ sup {
 
 blockquote {
   border-left: 5px solid $quote-border-color;
-  font-size: .9em;
+  font-size: 1.1em;
   line-height: 1.25;
   margin: 1.2em 0;
   padding: 0 2em;
