Disable underline for footnote backrefs
Keep the underline for hover, though

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -126,6 +126,17 @@ a {
   &:hover {
     text-decoration: underline;
   }
+
+  // scss-lint:disable QualifyingElement
+  &[rev="footnote"] {
+    // scss-lint:enable QualifyingElement
+
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 h1,
