Add experimental Piwik tracking

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,5 +93,6 @@
       </footer>
     </div>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    {% include piwik.html %}
   </body>
 </html>
