--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -51,15 +51,26 @@ $inline-box-shadow: 0 1px 0 $inline-box-shadow-color, 0 0 0 2px $inline-box-shad
   -webkit-font-feature-settings: $features;
 }
 
+@mixin hyphens($setting) {
+  hyphens: $setting;
+  // scss-lint:disable VendorPrefix
+  -webkit-hyphens: $setting;
+  -moz-hyphens: $setting;
+  -ms-hyphens: $setting;
+  -o-hyphens: $setting;
+}
+
 // Basic typography styles
 body {
   // Enable a couple of nice font features
   @include font-feature-settings('onum', 'kern', 'liga', 'clig', 'dlig', 'calt');
+  @include hyphens(auto);
 
   color: $main-color;
   font-family: $main-font;
   font-size: $font-size;
   line-height: 1.35;
+  word-wrap: break-word;
 }
 
 // Page container
@@ -70,6 +81,10 @@ body {
 
 article {
   margin-bottom: 15px;
+
+  p {
+    text-align: justify;
+  }
 }
 
 strong {
