--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -206,12 +206,17 @@ hr {
 
 // Images and figures
 img {
-  max-height: 100%;
   max-width: 100%;
 }
 
 figure {
   margin: 2em;
+
+  img {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
 }
 
 figcaption {
