Add Google Analytics tracking
It’s evil, but it’s free 😊

Closes GH-14

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
     {% feed_meta %}
   </head>
   <body>
+    {% if site.environment == 'production' %}{% include ga.html %}{% endif %}
     <div class="navbar">
       <div class="container">
         <div class="navbar-header">
