Move page header into an include

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,10 +3,6 @@ layout: default
 ---
 
 <article>
-  <header class="page-header">
-    <h1 class="title">{{page.title|escape}}
-      {% if page.subtitle %}<small>{{page.subtitle | escape}}</small>{% endif%}
-    </h1>
-  </header>
+  {% include page-header.html %}
   {{content}}
 </article>
