--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,5 @@
 layout: page
 ---
 
-<div class="post-info">
-  <p>
-    Posted on {{ page.date | date: site.format.date_long }}.
-    {% if page.path %}
-    <a href="{{site.github.url}}/edit/master/{{page.path}}">Edit on Github</a>
-    {% endif %}
-  </p>
-</div>
-
+{% include post-info.html %}
 {{ content }}
