--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,6 +1,10 @@
 <ol class="post-list">
   {% for post in include.posts limit: include.limit %}
+  {% if include.skip_current_page and post.id == page.id %}
+  {% continue %}
+  {% endif %}
   {% assign url = post.url | prepend: site.baseurl %}
+
   <li class="post-list-item">
     {% if post.date %}
     <span class="post-list-date">{{ post.date | date: site.format.date_long }}</span>
