--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -340,6 +340,11 @@ pre {
   }
 }
 
+.series-footer {
+  border-top: 1px solid $border-color;
+  margin-top: 1em;
+  padding: .5em;
+}
 
 .post-list {
   list-style: outside none none;
