--- a/_includes/feed-meta.html
+++ b/_includes/feed-meta.html
@@ -1,1 +1,1 @@
-<link type="application/atom+xml" rel="alternate" href="{{ include.url | prepend: site.baseurl | prepend: site.url }}" title="lunaryorn">
+<link type="application/atom+xml" rel="alternate" href="{{ include.url | prepend: site.baseurl | prepend: site.url }}" title="{{ include.title }}">
