--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="{{baseurl}}/index.html">
-            <img alt="My personal logo" src="{{site.baseurl}}/logo.png">
+            <img alt="My personal logo" src="{{site.baseurl}}/logo.svg">
           </a>
         </div>
         <ul class="navbar-nav">
