Move custom settings of config.yml
It’s safer to scope these into data files; particularly some plugins
seem to look at site.github.url instead of site.baseurl for whatever
reason 😒

--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -2,7 +2,7 @@
   <p>
     Posted on {{ page.date | date: site.format.date_long }}.
     {% if page.path %}
-    <a href="{{site.github.url}}/edit/master/{{page.path}}">Edit on Github</a>
+    <a href="{{site.data.github.url}}/edit/master/{{page.path}}">Edit on Github</a>
     {% endif %}
   </p>
 </div>
