--- a/_includes/ga.html
+++ b/_includes/ga.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', '{{site.tracking.ga.id}}', 'auto');
+  ga('create', '{{site.data.tracking.ga.id}}', 'auto');
   ga('send', 'pageview');
 
 </script>
