--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
           <a href="{{site.baseurl}}/archive.html">Archive</a>
           · <a href="{{site.baseurl}}/feed.atom">Feed</a>
           {% if page.path %}
-          · <a href="{{ site.github.url }}/blob/master/{{page.path}}">Source on Github</a>
+          · <a href="{{ site.data.github.url }}/blob/master/{{page.path}}">Source on Github</a>
           {% endif %}
         </p>
         <p>
