--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,22 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% if page.title %}{{ page.title | escape }} — {% endif %}{{site.name | escape }}</title>
 
     {% if page.author.name %}
     <meta name="author" content="{{ page.author.name }}">
     {% else %}
     <meta name="author" content="{{ site.author.name }}">
     {% endif %}
-    {% if page.excerpt %}
-    <meta name="description" content="{{ page.excerpt | markdownify | strip_html }}">
-    {% else %}
-    <meta name="description" content="{{ site.description | strip_html }}">
-    {% endif %}
-
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
-    {% include twitter-card.html %}
 
     <link rel="icon" sizes="16x16"   href="{{site.baseurl}}/icon-16.png">
     <link rel="icon" sizes="32x32"   href="{{site.baseurl}}/icon-32.png">
@@ -34,6 +24,8 @@
     {% for feed in page.extra_feeds %}
     {% include feed-meta.html url=feed.url title=feed.title %}
     {% endfor %}
+
+    {% seo %}
   </head>
   <body>
     {% if site.environment == 'production' %}{% include ga.html %}{% endif %}
@@ -69,8 +61,8 @@
            (<a href="{{site.baseurl}}/pages/colophon.html">colophon</a>).<br>
         </p>
         <p>
-           I'm on <a target="_blank" href="https://github.com/{{site.author.github }}">Github</a>,
-           <a target="_blank" href="https://twitter.com/{{ site.author.twitter }}">Twitter</a>, and
+           I'm on <a target="_blank" href="https://github.com/lunaryorn">Github</a>,
+           <a target="_blank" href="https://twitter.com/{{ site.twitter.username }}">Twitter</a>, and
            <a target="_blank" href="http://stackoverflow.com/users/355252/lunaryorn">Stack Overflow</a>.
         </p>
         <p>
