Fix Github repository links
Only add them if the site is actually built on Github

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
         <p>
           <a href="{{baseurl}}/archive.html">Archive</a>
           · <a href="{{baseurl}}/feed.atom">Feed</a>
-          {% if page.path %}
+          {% if site.github.repository_url and page.path %}
           · <a href="{{ site.github.repository_url }}/blob/master/{{page.path}}">Source on Github</a>
           {% endif %}
         </p>
