--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -1,8 +1,8 @@
 <div class="post-info">
   <p>
     Posted on {{ page.date | date: site.format.date_long }}.
-    {% if page.path %}
-    <a href="{{site.data.github.url}}/edit/master/{{page.path}}">Edit on Github</a>
+    {% if site.github.repository_url and page.path %}
+    <a href="{{ site.github.repository_url }}}/edit/master/{{page.path}}">Edit on Github</a>
     {% endif %}
   </p>
 </div>
