--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -2,7 +2,7 @@
   <p>
     Posted on {{ page.date | date: site.format.date_long }}.
     {% if site.github.repository_url and page.path %}
-    <a href="{{ site.github.repository_url }}}/edit/master/{{page.path}}">Edit on Github</a>
+    <a href="{{ site.github.repository_url }}/edit/master/{{page.path}}">Edit on Github</a>
     {% endif %}
   </p>
 </div>
