--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -69,3 +69,11 @@
   src: url('fonts/SourceCodePro-Bold.otf.woff') format('woff');
   font-weight: 700;
 }
+
+@font-face {
+  font-family: emoji;
+  src: local('Apple Color Emoji'), local('Android Emoji'), local('Segoe UI'),
+  local(EmojiSymbols), local(Symbola);
+  // Emoji unicode blocks
+  unicode-range: U+1F300-1F5FF, U+1F600-1F64F, U+1F680-1F6FF, U+2600-26FF, U+2700-27BF;
+}
